# getmipay-sdk-python

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_payin.py
getmipay/: __init__.py  auth.py  client.py  config.py  http_client.py
getmipay.egg-info/: PKG-INFO  SOURCES.txt
getmipay/models/: __init__.py  payment.py  response.py
getmipay/services/: payments.py
getmipay/utils/: _init_.py  validators.py
tests/: test_auth.py  test_payments.py
