[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getmipay"
version = "1.0.0"
description = "Official GetMiPay Python SDK"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
Homepage = "https://getmipay.com"
Documentation = "https://docs.getmipay.com"
Repository = "https://github.com/getmipay/getmipay-sdk-python"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true